--- a/crypto_prod.html
+++ b/crypto_prod.html
@@ -119,11 +119,19 @@
 			</div>
 			<div class="col-12 col-md-6 nav-main">
 				<ul>
-				<li><a href="index.html">Indexx500 Test</a></li>
-				<li><a href="indexx500_prod.html">Indexx500 Production</a></li>
-				<li><a href="crypto_test.html">Indexx Crypto Test</a></li>
-				<li class="active"><a href="crypto_prod.html">Indexx Crypto Production</a></li>
-				</ul>
+					<li>
+					  <a href="index.html">Indexx 500 Test</a> <br>
+					  <a href="indexx500_prod.html">Indexx 500 Production</a>
+					</li>
+					<li>
+					  <a href="crypto_test.html">Indexx Crypto Test</a> <br>
+					  <a href="crypto_prod.html" class="active-link">Indexx Crypto Production</a>
+					</li>
+					<li>
+					  <a href="indexxusd+_test.html">Indexx USD+ Test</a> <br>
+					  <a href="indexxusd+_prod.html">Indexx USD+ Production</a>
+					</li>
+				  </ul>
 			</div>
 		</div>
 	</div>
