--- a/crypto_prod.html
+++ b/crypto_prod.html
@@ -121,15 +121,15 @@
 				<ul>
 					<li>
 					  <a href="index.html">Indexx 500 Test</a> <br>
-					  <a href="indexx500_prod.html">Indexx 500 Production</a>
+					  <a href="indexx500_prod.html">Indexx 500 Production(IN500)</a>
 					</li>
 					<li>
 					  <a href="crypto_test.html">Indexx Crypto Test</a> <br>
-					  <a href="crypto_prod.html" class="active-link">Indexx Crypto Production</a>
+					  <a href="crypto_prod.html" class="active-link">Indexx Crypto Production(IC)</a>
 					</li>
 					<li>
 					  <a href="indexxusd+_test.html">Indexx USD+ Test</a> <br>
-					  <a href="indexxusd+_prod.html">Indexx USD+ Production</a>
+					  <a href="indexxusd+_prod.html">Indexx USD+ Production(iUSD+)</a>
 					</li>
 				  </ul>
 			</div>
@@ -174,7 +174,7 @@
 			</tr>
 			<tr>
 				<td> 7. Mint Token: </td>
-				<td><input style="width: auto;" type="text" id="address1" name="address1" placeholder=" Wallet Address">
+				<td><input style="width: auto;" type="text" id="address1" name="address1" placeholder=" To Wallet Address">
 					<input style="width: auto;" type="number" id="mint1" name="mint1" placeholder=" Amount to mint">
 					<button onclick="mint()"> Mint </button>
 				</td>
