--- a/indexx500_prod.html
+++ b/indexx500_prod.html
@@ -123,15 +123,15 @@
 				<ul>
 					<li>
 					  <a href="index.html">Indexx 500 Test</a> <br />
-					  <a href="indexx500_prod.html" class="active-link">Indexx 500 Production</a>
+					  <a href="indexx500_prod.html" class="active-link">Indexx 500 Production(IN500)</a>
 					</li>
 					<li>
 					  <a href="crypto_test.html">Indexx Crypto Test</a> <br />
-					  <a href="crypto_prod.html">Indexx Crypto Production</a>
+					  <a href="crypto_prod.html">Indexx Crypto Production(IC)</a>
 					</li>
 					<li>
 					  <a href="indexxusd+_test.html">IndexxUSD+ Test</a><br />
-					  <a href="indexxusd+_prod.html">IndexxUSD+ Production</a>
+					  <a href="indexxusd+_prod.html">IndexxUSD+ Production(iUSD+)</a>
 					</li>
 				  </ul>
 			</div>
@@ -176,7 +176,7 @@
 			</tr>
 			<tr>
 				<td> 7. Mint Token: </td>
-				<td><input style="width: auto;" type="text" id="address1" name="address1" placeholder=" Wallet Address">
+				<td><input style="width: auto;" type="text" id="address1" name="address1" placeholder=" To Wallet Address">
 					<input style="width: auto;" type="number" id="mint1" name="mint1" placeholder=" Amount to mint">
 					<button onclick="mint()"> Mint </button>
 				</td>
