--- a/indexxusd+_prod.html
+++ b/indexxusd+_prod.html
@@ -126,16 +126,16 @@
           <ul>
             <li>
               <a href="index.html">Indexx 500 Test</a><br />
-              <a href="indexx500_prod.html">Indexx 500 Production</a>
+              <a href="indexx500_prod.html">Indexx 500 Production(IN500)</a>
             </li>
             <li>
               <a href="crypto_test.html">Indexx Crypto Test</a> <br />
-              <a href="crypto_prod.html">Indexx Crypto Production</a>
+              <a href="crypto_prod.html">Indexx Crypto Production(IC)</a>
             </li>
             <li>
               <a href="indexxusd+_test.html">Indexx USD+ Test</a> <br />
               <a href="indexxusd+_prod.html" class="active-link"
-                >Indexx USD+ Production</a
+                >Indexx USD+ Production(iUSD+)</a
               >
             </li>
           </ul>
@@ -186,7 +186,7 @@
               type="text"
               id="address1"
               name="address1"
-              placeholder=" Wallet Address"
+              placeholder=" To Wallet Address"
             />
             <input
               style="width: auto"
