button hover colors updated

--- a/indexx500_prod.html
+++ b/indexx500_prod.html
@@ -39,7 +39,7 @@
 	button {
 		width: 20%;
 		height: 4%;
-		background-color: #02146f;
+		background-color: #0b81c1;
 		color: white;
 		padding: 14px 20px;
 		border: none;
