--- a/indexxusd+_prod.html
+++ b/indexxusd+_prod.html
@@ -51,8 +51,8 @@
     }
 
     button:hover {
-      background-color: #51da63;
-      color: white;
+      background-color: #090a0a;
+		color: white;
     }
 
     input[type="submit"]:hover {
