updated ico details

--- a/crypto_prod.html
+++ b/crypto_prod.html
@@ -125,7 +125,7 @@
 					</li>
 					<li>
 					  <a href="crypto_test.html">Indexx Crypto Test</a> <br>
-					  <a href="crypto_prod.html" class="active-link">Indexx Crypto Production(IC)</a>
+					  <a href="crypto_prod.html" class="active-link">Indexx Crypto Production(INXC)</a>
 					</li>
 					<li>
 					  <a href="indexxusd+_test.html">Indexx USD+ Test</a> <br>
@@ -155,7 +155,7 @@
 
 			<tr>
 				<td>1. Contract Address:</td>
-				<td>0x4C3ED00AadCde2d5CA117f74642031CD7E087918</td>
+				<td>0x7325e062ea31e7b977fbebbcc45de30c3e894988</td>
 			</tr>
 
 			<tr>
@@ -215,7 +215,7 @@
 
 			<tr>
 				<td> 10. Contract Address: </td>
-				<td>0x172aa1665048C95F1cD8586191dE02E84EC69079 </td>
+				<td>0xD0c7102e360CcFc6aFD583D37bA94fb1A16aa7F9 </td>
 			</tr>
 			<tr>
 				<td> 11. ICO Admin: </td>
@@ -289,7 +289,7 @@
 
 			<tr>
 				<td>22. Contract Address:</td>
-				<td>0x2770f5b92e8190847662717Bc23307B306CB5Afb</td>
+				<td>0x946c1563F2819E43Ebc50252cFF2B3fF0aB60413</td>
 			</tr>
 
 			<tr>
@@ -1506,9 +1506,9 @@
 	}
 ];
 
-	const tokenAddress = "0x4C3ED00AadCde2d5CA117f74642031CD7E087918";
-	const icoAddress = "0x172aa1665048C95F1cD8586191dE02E84EC69079";
-	const lockAddress = "0x2770f5b92e8190847662717Bc23307B306CB5Afb";
+	const tokenAddress = "0x7325e062ea31e7b977fbebbcc45de30c3e894988";
+	const icoAddress = "0xD0c7102e360CcFc6aFD583D37bA94fb1A16aa7F9";
+	const lockAddress = "0x946c1563F2819E43Ebc50252cFF2B3fF0aB60413";
 
 	async function schedule() {
 		try {
