--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					</li>
 					<li>
 					  <a href="crypto_test.html">Indexx Crypto Test</a> <br />
-					  <a href="crypto_prod.html">Indexx Crypto Production(IC)</a>
+					  <a href="crypto_prod.html">Indexx Crypto Production(INXC)</a>
 					</li>
 					<li>
 					  <a href="indexxusd+_test.html">Indexx USD+ Test</a> <br />
