--- a/crypto_test.html
+++ b/crypto_test.html
@@ -125,7 +125,7 @@
 					</li>
 					<li>
 					  <a href="crypto_test.html" class="active-link">Indexx Crypto Test</a> <br />
-					  <a href="crypto_prod.html">Indexx Crypto Production(IC)</a>
+					  <a href="crypto_prod.html">Indexx Crypto Production(INXC)</a>
 					</li>
 					<li>
 					  <a href="indexxusd+_test.html">Indexx USD+ Test</a> <br />
