update ico admin page for indexx exchange

--- a/crypto_test.html
+++ b/crypto_test.html
@@ -131,6 +131,13 @@
 					  <a href="indexxusd+_test.html">Indexx USD+ Test</a> <br />
 					  <a href="indexx500_prod.html">Indexx USD+ Production(iUSD+)</a>
 					</li>
+					<li>
+						<a href="indexxexchange_test.html">Indexx Exchange Test</a>
+						<br />
+						<a href="indexxexchange_prod.html"
+						  >Indexx Exchange Production(iNEX)</a
+						>
+					  </li>
 				  </ul>
 			</div>
 		</div>
