--- a/indexx500_prod.html
+++ b/indexx500_prod.html
@@ -133,6 +133,13 @@
 					  <a href="indexxusd+_test.html">IndexxUSD+ Test</a><br />
 					  <a href="indexxusd+_prod.html">IndexxUSD+ Production(iUSD+)</a>
 					</li>
+					<li>
+						<a href="indexxexchange_test.html">Indexx Exchange Test</a>
+						<br />
+						<a href="indexxexchange_prod.html"
+						  >Indexx Exchange Production(iNEX)</a
+						>
+					  </li>
 				  </ul>
 			</div>
 		</div>
