--- a/indexxusd+_test.html
+++ b/indexxusd+_test.html
@@ -139,6 +139,15 @@
               <br />
               <a href="indexxusd+_prod.html">Indexx USD+ Production(iUSD+)</a>
             </li>
+            <li>
+              <a href="indexxexchange_test.html" 
+                >Indexx Exchange Test</a
+              >
+              <br />
+              <a href="indexxexchange_prod.html"
+                >Indexx Exchange Production(iNEX)</a
+              >
+            </li>
           </ul>
         </div>
       </div>
