--- a/indexxexchange_test.html
+++ b/indexxexchange_test.html
@@ -242,7 +242,7 @@
       </tbody>
     </table>
 
-    <div class="nine">
+    <!-- <div class="nine">
       <br /><br />
       <h1>Pre-ICO and ICO Contract<span>Admin Dashboard</span></h1>
       <button style="margin-left: 40%" onclick="load()">Connect Wallet</button>
@@ -383,7 +383,7 @@
           </td>
         </tr>
       </tbody>
-    </table>
+    </table> -->
   </body>
 
   <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
